@@ -357,6 +357,7 @@ edit.button.underline=Underlined text
 edit.button.underline.text=Underlined text
 edit.button.unordered.list=Bulleted list
 edit.button.unordered.list.text=Bulleted list item
+edit.caption.antispam=Anti-spam check. Do <b>NOT</b> fill this in!
 edit.caption.comment=Edit Comment
 edit.caption.minor=Minor Edit
 edit.caption.watch=Add to Watchlist
